--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">BR158</string>
     <string name="title_activity_maps">BR 158</string>
     <string name="button_props">Cadastro de Proprietários</string>
+    <string name="dados_do_proprietario">Dados do Proprietário</string>
+    <string name="nome">Nome: </string>
+    <string-array name="sexo">
+        <item>Masculino</item>
+        <item>Feminino</item>
+    </string-array>
+
 </resources>
