Info Prop Confrontantes not showing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,11 @@
         <item>Parcialmente Alagável</item>
     </string-array>
 
+    <string-array name="uso">
+        <item>Residencial</item>
+        <item>Comercial</item>
+        <item>Industrial</item>
+        <item>Rural</item>
+    </string-array>
+
 </resources>
