--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     </string-array>
 
     <string-array name="filtros">
+        <item></item>
         <item>Todos</item>
         <item>Pessoa Física</item>
         <item>Pessoa Jurídica</item>
