--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,10 +96,11 @@
         <item>Escritura de aquisição do imóvel</item>
         <item>Contrato de compra e venda</item>
         <item>Comprovante de IPTU (IMÓVEL URBANO)</item>
-        <item>Comprovante de CCIR 2010/2011/2012/2013/2014 (IMÓVEL RURAL)</item>
-        <item>Declaração do ITR do último exercício (IMÓVEL RURAL)</item>
+        <item>Comprovante de CCIR 2015/2016 (IMÓVEL RURAL)</item>
+        <item>Declaração do ITR do último exercício (2017) (IMÓVEL RURAL)</item>
         <item>CAR (IMÓVEL RURAL)</item>
         <item>Planta plotada de loteamento (IMÓVEL URBANO) ou Planta do terreno / gleba (RURAL)</item>
+        <item>Declaração de reconhecimento de Faixa de Domínio - DNIT</item>
         <item>Ata de posse</item>
         <item>Identidade e CPF do prefeito</item>
         <item>Certidão de casamento - prefeito</item>
